k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  type: NodePort
  selector:
    app: weather-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30036
